--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"> 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/carousel/style.css">
    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>  -->
   <title>Guess Number</title>
 </head>
@@ -32,6 +32,6 @@
       </div>
   </div>
   <span class="magic">Inchalah</span>
- <script src="index.js"></script>
+ <script src="/carousel/index.js"></script>
 </body>
 </html>
